<resources>
    <string name="app_name">TicketBookingApp</string>
    <string name="title_activity_welcome">welcome</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Settings</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="home">Home</string>
    <string name="reviews">Genres</string>
    <string name="stream_movies">Stream movies</string>
    <string name="userprofile">Profile</string>
    <string name="welcome">Welcome</string>
    <string name="signup_using">Signup using</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="already_have_an_account">Already Have an account?</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin">Signin</string>
    <string name="signup">Signup</string>
    <string name="don_t_have_a_account">Don\'t have a account?</string>
    <string name="editprofile">EditProfile</string>
    <string name="settings">Settings</string>
    <string name="account_settings">Account Settings</string>
    <string name="log_out">Log out</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="personal_info">Personal Info</string>
    <string name="mobile_no">Mobile No</string>
    <string name="birthday">Birthday</string>
    <string name="dd_mm_yy">DD/MM/YY</string>
    <string name="gender">Gender</string>
    <string name="save_changes">Save changes</string>
    <string name="book_tickets">Book Tickets</string>
    <string name="title_activity_booking_ticket_page1">BookingTicketPage1Activity</string>
</resources>