<?xml version="1.0" encoding="utf-8"?>
<layout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto">
<data>
    <variable
        name="ticketbookingapp"
        type="com.mycode.ticketbookingapp.model.TicketBookingApp" />
    <variable
        name="signInViewModel"
        type="com.mycode.ticketbookingapp.signin.SignInViewModel" />

</data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/firstlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary">


    <TextView
        android:id="@+id/appname"
        android:layout_width="256dp"
        android:layout_height="48dp"
        android:layout_marginTop="200dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/app_name"
        android:textSize="32sp"
        android:textColor="?attr/colorOnSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EmailId1"
        style="@style/Widget.Material3.AutoCompleteTextView.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:boxBackgroundMode="filled"
        app:boxStrokeColor="?attr/colorPrimary"
        app:boxStrokeWidthFocused="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appname"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        app:startIconTint="?attr/colorAccent"
        android:fontFamily="sans-serif"
        android:inputType="textEmailAddress"
        android:textColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={ticketbookingapp.email}"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password1"
        style="@style/Widget.Material3.AutoCompleteTextView.FilledBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:boxBackgroundMode="filled"
        app:boxStrokeColor="?attr/colorPrimary"
        app:boxStrokeWidthFocused="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailId1"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        app:startIconTint="?attr/colorAccent"
        android:fontFamily="sans-serif"
        android:inputType="textPassword"
        android:textColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={ticketbookingapp.password}"/>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/Login"
        android:layout_width="115dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/signin"
        android:onClick="@{()->signInViewModel.login(ticketbookingapp.email,ticketbookingapp.password)}"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password1" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="220dp"
        android:layout_height="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/don_t_have_a_account"
        android:textSize="20sp"
        android:textColor="?attr/colorOnSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.324"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login" />

    <TextView
        android:id="@+id/SignupPage"
        android:layout_width="70dp"
        android:layout_height="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/signup"
        android:onClick="@{()->signInViewModel.navigateToSignUp()}"
        android:textColor="@color/yellow"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/Login" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>