<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="ticketbookingapp"
            type="com.mycode.ticketbookingapp.model.TicketBookingApp" />
        <variable
            name="signUpViewModel"
            type="com.mycode.ticketbookingapp.signup.SignUpViewModel" />

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/secondlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorOnPrimary">


        <TextView
            android:id="@+id/appname"
            android:layout_width="256dp"
            android:layout_height="48dp"
            android:layout_marginTop="152dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/app_name"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username"
            style="@style/Widget.Material3.AutoCompleteTextView.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            app:boxBackgroundMode="filled"
            app:boxStrokeColor="?attr/colorPrimary"
            app:boxStrokeWidthFocused="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appname"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            app:startIconTint="?attr/colorAccent"
            android:fontFamily="sans-serif"
            android:inputType="textPassword"
            android:textColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={ticketbookingapp.username}"/>

        </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                style="@style/Widget.Material3.AutoCompleteTextView.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:boxBackgroundMode="filled"
                app:boxStrokeColor="?attr/colorPrimary"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/ic_baseline_email_24"
                app:startIconTint="?attr/colorAccent"
                android:fontFamily="sans-serif"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={ticketbookingapp.email}"/>
            </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/Widget.Material3.AutoCompleteTextView.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:boxBackgroundMode="filled"
            app:boxStrokeColor="?attr/colorPrimary"
            app:boxStrokeWidthFocused="2dp"
            app:startIconDrawable="@drawable/ic_baseline_vpn_key_24"
            app:startIconTint="?attr/colorAccent"
            android:fontFamily="sans-serif"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={ticketbookingapp.password}"/>
        </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:id="@+id/Signup"
            android:layout_width="115dp"
            android:layout_height="45dp"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/signup"
            android:onClick="@{()->signUpViewModel.register(ticketbookingapp.username,ticketbookingapp.email,ticketbookingapp.password)}"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="260dp"
            android:layout_height="35dp"
            android:layout_marginTop="24dp"
            android:text="@string/already_have_an_account"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.283"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Signup" />

        <TextView
            android:id="@+id/loginPage"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="48dp"
            android:onClick="@{()->signUpViewModel.navigateToSignIn()}"
            android:text="@string/signin"
            android:textColor="@color/yellow"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/Signup" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
