<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="editProfileViewModel"
            type="com.mycode.ticketbookingapp.profilefragment.editprofile.EditProfileViewModel" />
    <variable
        name="ticketBookingApp"
        type="com.mycode.ticketbookingapp.model.TicketBookingApp" />
    </data>

    <ScrollView
        android:background="?attr/colorOnPrimary"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/editframe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userdp1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="24dp"
                app:civ_border_color="#918D8D"
                app:civ_border_width="0.5dp"
                android:background="@drawable/ic_account"
                android:onClick="@{()-> editProfileViewModel.imageFormating()}"
                app:imgUrl="@{editProfileViewModel.getData.profilePicture}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingClass" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                app:boxBackgroundMode="outline"
                app:boxStrokeWidthFocused="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/userdp1"
                app:startIconDrawable="@drawable/ic_baseline_person_24"
                app:startIconTint="?attr/colorAccent"
                app:boxStrokeColor="?attr/colorPrimary"
                android:inputType="text"
                style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:padding="1dp"
                    android:text="@={editProfileViewModel.getData.username}"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:boxBackgroundMode="outline"
                app:boxStrokeWidthFocused="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name"
                app:startIconDrawable="@drawable/ic_baseline_email_24"
                app:startIconTint="?attr/colorAccent"
                app:boxStrokeColor="?attr/colorPrimary"
                android:inputType="textEmailAddress"
                style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:padding="1dp"
                    android:text="@={editProfileViewModel.getData.email}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location"
                app:boxBackgroundMode="outline"
                app:boxStrokeWidthFocused="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email"
                app:startIconDrawable="@drawable/ic_baseline_location_on_24"
                app:startIconTint="?attr/colorAccent"
                app:boxStrokeColor="?attr/colorPrimary"
                android:inputType="textEmailAddress"
                style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:padding="1dp"
                    android:text="@={editProfileViewModel.getData.location}"/>
            </com.google.android.material.textfield.TextInputLayout>



            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/personal_info"
                android:fontFamily="sans-serif"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.034"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/location" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mobileno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile_no"
                app:boxBackgroundMode="outline"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/ic_baseline_phone_android_24"
                app:startIconTint="?attr/colorAccent"
                app:boxStrokeColor="?attr/colorPrimary"
                android:inputType="phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
            style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:padding="1dp"
                    android:text="@={editProfileViewModel.getData.mobileNumber}"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/birthday"
                app:boxBackgroundMode="outline"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/ic_baseline_calendar_month_24"
                app:startIconTint="?attr/colorAccent"
                app:boxStrokeColor="?attr/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mobileno"
                style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense">
                <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/birthdayText"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:padding="1dp"
                    android:onClick="@{()-> editProfileViewModel.Calendar()}"
                    android:text="@{editProfileViewModel.getData.birthday}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/gender"
                app:boxBackgroundMode="outline"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/ic_baseline_man_24"
                app:startIconTint="?attr/colorAccent"
                app:boxStrokeColor="?attr/colorPrimary"
                android:inputType="phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/birthday"
                style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense">
                <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/genderText"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:padding="1dp"
                    android:text="@{editProfileViewModel.getData.gender}"
                    android:onClick="@{()-> editProfileViewModel.gender()}" />
            </com.google.android.material.textfield.TextInputLayout>



            <Button
                android:id="@+id/savechanges"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:onClick="@{() -> editProfileViewModel.updateData(editProfileViewModel.getData.username,editProfileViewModel.getData.email,editProfileViewModel.getData.password,editProfileViewModel.getData.location,editProfileViewModel.getData.mobileNumber,editProfileViewModel.getData.birthday,editProfileViewModel.getData.gender)}"
                android:text="@string/save_changes"
                android:textColor="?attr/colorOnSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gender"/>

                    <ProgressBar
                        android:id="@+id/loading_spinner"
                        android:visibility="invisible"
                        style="@style/Widget.AppCompat.ProgressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.498"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
